--- a/package.json
+++ b/package.json
@@ -147,6 +147,7 @@
     "stylelint-scss": "^1.4.4"
   },
   "dependencies": {
-    "es6-object-assign": "^1.1.0"
+    "cookieconsent": "^3.0.6",
+    "es6-object-assign": "^1.1.0",
   }
 }
