--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,12 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
-    "composer/installers": "~1.0",
-    "yahnis-elsts/plugin-update-checker": "^4.4",
-    "generoi/wp-genero-common": "~0.1"
+    "php": ">=5.6.0"
   },
   "require-dev": {
-    "squizlabs/php_codesniffer": "^2.5.1"
+    "squizlabs/php_codesniffer": "^3.0",
+    "phpstan/phpstan": "^1.8",
+    "szepeviktor/phpstan-wordpress": "^1.1"
   },
   "autoload": {
     "psr-4": {
@@ -42,7 +41,8 @@
   },
   "scripts": {
     "test": [
-      "vendor/bin/phpcs"
+      "phpcs",
+      "phpstan"
     ]
   },
   "archive" : {
